--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             }
             var seconds = 5;
     
-   /* function countdown() {
+    function countdown() {
         seconds = seconds - 1;
         if (seconds < 0) {
             // Chnage your redirection link here
@@ -44,7 +44,7 @@
         }
     }
 // Run countdown function
-    countdown();*/
+    countdown();
         </script>
     </body>
 </html>
